public enum PlayerStates
{
    Idle,
    Walk
}

public enum EnemyStates
{
    Idle,
    Patrol,
    Follow,
    Attack
}

public class LittleKinghtAnim

{

    public const string  Velocity = "Velocity";
    public const string  Moving = "Moving";
    
}
public class EnemyAnimationParameters
{

    public const string  Velocity = "Velocity"; // float
    public const string  Proximity = "Proximity"; // float
    public const string  InView = "InView"; // bool
    
}
    

